--- a/src/style/base.css
+++ b/src/style/base.css
@@ -1,6 +1,6 @@
 @layer base {
   html {
-    @apply font-sans relative w-full max-w-[1920px] min-h-screen m-auto;
+    @apply font-noto-sans relative w-full max-w-[1440px] min-h-screen m-auto;
   }
 
   main {
