feat: menu component update
優化menu 部分程式碼

--- a/src/style/components.css
+++ b/src/style/components.css
@@ -2,4 +2,7 @@
   .wrap {
       @apply flex flex-col min-h-screen md:flex-row;
   }
+  .flex-center{
+    @apply flex items-center justify-center
+  }
 }
