feat: update item component
webItem組件 部分程式優化

--- a/src/style/components.css
+++ b/src/style/components.css
@@ -5,4 +5,7 @@
   .flex-center{
     @apply flex items-center justify-center
   }
+  .card{
+    @apply flex h-[225px] max-w-[274px] w-full gap-9
+  }
 }
